[gd_scene load_steps=6 format=3 uid="uid://5q6pepihepiv"]

[ext_resource type="Script" uid="uid://cbj303o2arxy2" path="res://scenes/ui/musikmon_pedia/MusikMonDetailView.gd" id="1"]
[ext_resource type="Script" uid="uid://1eahgdgsvme6" path="res://scenes/ui/musikmon_pedia/musikmon_list.gd" id="1_rhh05"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sc18x"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhh05"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3ucs"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rhh05")
metadata/_edit_horizontal_guides_ = [76.0]
metadata/_edit_vertical_guides_ = [78.0, 395.0]

[node name="mon_list" type="ItemList" parent="."]
custom_minimum_size = Vector2(250, 200)
layout_mode = 0
offset_left = 78.0
offset_top = 76.0
offset_right = 328.0
offset_bottom = 176.0
tooltip_text = "üîé LMB
‚ûï RMB"
allow_search = false
fixed_icon_size = Vector2i(24, 24)

[node name="inventory" type="ItemList" parent="."]
custom_minimum_size = Vector2(250, 150)
layout_mode = 0
offset_left = 78.0
offset_top = 343.0
offset_right = 328.0
offset_bottom = 493.0
tooltip_text = "üîé LMB
‚ûñ RMB"
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxFlat_sc18x")
theme_override_styles/panel = SubResource("StyleBoxFlat_rhh05")
theme_override_styles/selected = SubResource("StyleBoxFlat_p3ucs")
max_columns = 0
icon_mode = 0
fixed_icon_size = Vector2i(64, 64)

[node name="MusikMonDetailView" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 0
offset_left = 410.0
offset_top = 76.0
offset_right = 610.0
offset_bottom = 376.0
script = ExtResource("1")

[node name="name_label" type="Label" parent="MusikMonDetailView"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 20
text = "name"
horizontal_alignment = 1

[node name="img_texture" type="TextureRect" parent="MusikMonDetailView"]
layout_mode = 2

[node name="typ_label" type="Label" parent="MusikMonDetailView"]
layout_mode = 2
text = "typ"

[node name="rollen_label" type="Label" parent="MusikMonDetailView"]
layout_mode = 2
text = "rollen"

[node name="beschreibung_label" type="RichTextLabel" parent="MusikMonDetailView"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "-"
context_menu_enabled = true

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 333.0
offset_top = 76.0
offset_right = 395.0
offset_bottom = 142.0

[node name="zurueck_button" type="Button" parent="ButtonContainer"]
layout_mode = 2
tooltip_text = "Vorheriges MusikMon"
text = "‚óÄÔ∏è"

[node name="weiter_button" type="Button" parent="ButtonContainer"]
layout_mode = 2
tooltip_text = "N√§chstes  MusikMon"
text = "‚ñ∂Ô∏è"

[node name="headline" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "üé∂ MusikMon-Pedia ü™ï"
horizontal_alignment = 1

[node name="inventoryLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 319.0
offset_right = 217.0
offset_bottom = 342.0
text = "Starter MusikMon"

[node name="Footer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonSet" type="VBoxContainer" parent="Footer"]
layout_mode = 2
alignment = 1

[node name="Mainmenu" type="Button" parent="Footer/ButtonSet"]
layout_mode = 2
text = "üìá Hauptmen√º"

[connection signal="item_clicked" from="mon_list" to="." method="_on_mon_list_item_clicked"]
[connection signal="item_clicked" from="inventory" to="." method="_on_inventory_item_clicked"]
[connection signal="gui_input" from="MusikMonDetailView/img_texture" to="MusikMonDetailView" method="_on_img_texture_gui_input"]
[connection signal="pressed" from="ButtonContainer/zurueck_button" to="MusikMonDetailView" method="_on_zurueck_button_pressed"]
[connection signal="pressed" from="ButtonContainer/weiter_button" to="MusikMonDetailView" method="_on_weiter_button_pressed"]
[connection signal="pressed" from="Footer/ButtonSet/Mainmenu" to="." method="_on_mainmenu_pressed"]
